Fix scrolling and hover issues on tablet

--- a/src/less/table.less
+++ b/src/less/table.less
@@ -47,7 +47,7 @@ tbody tr {
     text-align: right;
   }
 
-  .no-touch &.highlight:hover {
+  .no-touch &.highlight:hover, .no-touch &.highlighted {
     background-color: @warning-bg;
   }
 }
